Atualização do site pessoal

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Nav -->
+		<!-- Navegação -->
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#top">Início</a></li>
-					<li><a href="#work">Especialidades</a></li>
+					<li><a href="#work">Experiências</a></li>
 					<li><a href="#portfolio">Portfólio</a></li>
 					<li><a href="#contact">Contato</a></li>
 				</ul>
 			</nav>
 
-		<!-- Home -->
+		<!-- Início -->
 			<article id="top" class="wrapper style1">
 				<div class="container">
 					<div class="row">
@@ -29,32 +29,32 @@
 							<header>
 								<h1>Olá, eu sou <strong>Demétrius</strong>.</h1>
 							</header>
-							<p>Sou um estudante de uma escola profissionalizante e curso Informática. <br> Meu hobby é passar o tempo com jogos de computador nas horas vagas.</p>
-							<a href="#work" class="button large scrolly">Veja minhas especialidades</a>
+							<p>Sou um estudante de uma escola profissionalizante e curso Informática. <br> Estou sempre em busca de novos conhecimentos e ligado nas novidades do mundo da tecnologia e do hardware.</p>
+							<a href="#work" class="button large scrolly">Veja minhas experiências</a>
 						</div>
 					</div>
 				</div>
 			</article>
 
-		<!-- Work -->
+		<!-- Experiências -->
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Especialidades</h2>
+						<h2>Experiências</h2>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-file"></span>
 								<h3>Front-End</h3>
-								<p>HTML, CSS, e JavaScript.</p>
+								<p>Desenvolvimento de sites em <strong>HTML, CSS e JAVASCRIPT.</strong></p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon brands featured fa-python"></span>
-								<h3>Back-End</h3>
-								<p>Python.</p>
+								<h3>Python</h3>
+								<p>Desenvolvimento de códigos com conceitos básicos de <strong>PYTHON</strong>.</p>
 							</section>
 						</div>
 					</div>
