--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				</div>
 			</article>
 
-		<!-- Portfolio -->
+		<!-- Portfólio -->
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
@@ -85,7 +85,7 @@
 				</div>
 			</article>
 
-		<!-- Contact -->
+		<!-- Contato -->
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 						<div class="col-12">
